fixed horizontal scroll

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -125,7 +125,7 @@
     background-image: url(../images/event_background.jpg);
     background-size: cover;
     background-position: center;
-    width: 99vw;
+    width: 100vw;
     height: 550px;
 
     @include onTablet {
