--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -21,6 +21,7 @@
 
   &__body {
     margin: 0;
+    overflow-x: hidden;
 
     &--with-menu {
       overflow: hidden;
